# countless

./: README.md  pyproject.toml  pytest.ini
countless/: __init__.py  core.py  decorators.py
countless/basic/: __init__.py  ops.py  targets.py
countless/basic/impls/: __init__.py  crop.py  noop.py
countless/batched/: __init__.py  ops.py  targets.py
countless/batched/impls/: __init__.py  crop.py
examples/: core_usage.py  core_usage_decorators.py  core_usage_explicit.py  crop.py
tests/countless/: test_countless.py
