[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "countless"
authors = [{ name = "LucaBonfiglioli", email = "luca.bonfiglioli@gmail.com" }]
description = "PyTorch Image Augmentation."
readme = "README.md"
license = "UNLICENSE"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
keywords = [
    "pytorch",
    "image",
    "augmentation",
    "data",
    "science",
    "machine",
    "learning",
]
dependencies = ["torch>=2.0"]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
dev = ["black", "flake8"]
build = ["hatch", "build"]

[project.urls]
"Source" = "https://github.com/lucabonfiglioli/countless"
"Issues" = "https://github.com/lucabonfiglioli/countless/issues"

[tool.hatch.version]
path = "countless/__init__.py"

[tool.hatch.build]
include = ["countless/**/*.py", "LICENSE"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused imports in __init__.py files.
